--- a/app/index.html
+++ b/app/index.html
@@ -1476,7 +1476,47 @@
 </head>
 
 <body>
+    <div id="app-splash"
+        style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: #ffffff; z-index: 9999999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.4s ease-out;">
+        <img src="../assets/images/logo-dpto-medico-large.png" class="splash-logo" alt="Departamento Médico">
+        <div
+            style="width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #4ade80; border-radius: 50%; animation: spin 0.8s linear infinite; margin-top: 20px;">
+        </div>
+        <style>
+            @keyframes spin {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
 
+            @keyframes pulse {
+                0% {
+                    transform: scale(1);
+                }
+                50% {
+                    transform: scale(1.03);
+                }
+                100% {
+                    transform: scale(1);
+                }
+            }
+
+            .splash-logo {
+                width: 280px;
+                height: auto;
+                animation: pulse 2s infinite;
+            }
+
+            @media (min-width: 1024px) {
+                .splash-logo {
+                    width: 450px;
+                }
+            }
+        </style>
+    </div>
     <header class="header" id="header">
         <div class="container header__container">
             <div class="header__left">
@@ -3967,6 +4007,17 @@ const canManageForumMessage = (msg, user) => Boolean(user) && (isAdmin || isForu
                     .catch(() => console.debug('[PWA] Service Worker no registrado'));
             });
         }
+    </script>
+    <script>
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+                var splash = document.getElementById('app-splash');
+                if (splash) {
+                    splash.style.opacity = '0';
+                    setTimeout(function() { splash.remove(); }, 400);
+                }
+            }, 1500);
+        });
     </script>
     <div id="push-permission-banner" class="push-banner hidden">
         <div style="font-weight:700; color:#111827; font-size:15px; text-align:center;">Notificaciones del Departamento Médico</div>
