--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,20 @@
           </div>
         </button>
 
+        <div class="nav-item-wrapper" id="portal-wrapper">
+          <div class="dm-cube nav-item" tabindex="0" id="btn-portal" role="button" aria-label="Portal" data-external="true">
+            <div class="dm-cube__content">
+              <span class="dm-cube__icon nav-icon"><i class="fa-solid fa-briefcase"></i></span>
+              <span class="dm-cube__label nav-label">Portal</span>
+            </div>
+          </div>
+          <div class="portal-submenu" id="portal-bubble" style="display: none;">
+            <a href="https://brisasaludybienestar.com/" target="_blank" rel="noreferrer" class="portal-link" id="portal-action">
+              <i class="fa-solid fa-globe"></i>
+            </a>
+          </div>
+        </div>
+
         <!-- Space for the Assistant bot (desktop only). JS moves #dmAssistantFab here on desktop -->
         <div id="dmDesktopSidebarBotSlot" class="dm-desktop-sidebar__bot-slot" aria-label="Asistente IA"></div>
       </nav>
