--- a/index.html
+++ b/index.html
@@ -1701,13 +1701,13 @@
         </button>
 
         <div class="nav-item-wrapper" id="portal-wrapper">
-          <div class="dm-cube nav-item" tabindex="0" id="btn-portal" role="button" aria-label="Portal" data-external="true">
+          <div class="dm-cube nav-item" tabindex="0" id="btn-portal" role="button" aria-label="Portal" data-external="true" aria-controls="portal-bubble" aria-haspopup="true" aria-expanded="false">
             <div class="dm-cube__content">
               <span class="dm-cube__icon nav-icon"><i class="fa-solid fa-briefcase"></i></span>
               <span class="dm-cube__label nav-label">Portal</span>
             </div>
           </div>
-          <div class="portal-submenu" id="portal-bubble" style="display: none;">
+          <div class="portal-submenu" id="portal-bubble" aria-hidden="true">
             <a href="https://brisasaludybienestar.com/" target="_blank" rel="noreferrer" class="portal-link" id="portal-action">
               <i class="fa-solid fa-globe"></i>
             </a>
