Correccion ubicacion burbuja chat

--- a/app/index.html
+++ b/app/index.html
@@ -1118,6 +1118,7 @@
         /* MOBILE (simple ajuste) */
         @media (max-width: 768px), (display-mode: standalone) {
             .brisa-chat-bubble {
+                left: 0;
                 bottom: calc(var(--bottom-nav-h) + 16px + env(safe-area-inset-bottom));
             }
 
