--- a/app/index.html
+++ b/app/index.html
@@ -479,14 +479,23 @@
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
         }
 
-        /* BURBUJA PRINCIPAL (Médicos conectados) */
-        .brisa-chat-bubble {
+        .brisa-chat-fab {
             position: fixed;
             bottom: var(--dm-fab-bottom);
             left: 18px;
-            width: 58px;
-            height: 58px;
+            width: var(--dm-chat-fab-size, 58px);
+            height: var(--dm-chat-fab-size, 58px);
+            z-index: 50;
+        }
+
+        /* BURBUJA PRINCIPAL (Médicos conectados) */
+        .brisa-chat-bubble {
+            position: absolute;
+            inset: 0;
+            width: 100%;
+            height: 100%;
             border-radius: 999px;
+            z-index: 50;
             background: radial-gradient(circle at 20% 0%, #8fcd1f, #5a8a00);
             display: flex;
             align-items: center;
@@ -497,6 +506,7 @@
             opacity: 0;
             transform: translateY(24px);
             animation: fab-float-up 0.6s ease-out 0.25s forwards;
+            transition: all 300ms ease;
         }
 
         .brisa-chat-bubble-icon {
@@ -525,14 +535,16 @@
 
         /* PANEL LISTA DE MÉDICOS CONECTADOS */
         .brisa-chat-panel {
-            position: fixed;
-            bottom: calc(var(--dm-fab-bottom) + 66px);
-            left: 18px;
-            width: 260px;
+            position: absolute;
+            bottom: calc(120% + var(--brisa-panel-offset, 0px));
+            right: 0;
+            left: auto;
+            width: 18rem;
             max-height: 420px;
             background: rgba(255, 255, 255, 0.94);
             backdrop-filter: blur(18px);
             -webkit-backdrop-filter: blur(18px);
+            z-index: 40;
             border-radius: 18px;
             border: 1px solid rgba(255, 255, 255, 0.65);
             box-shadow: 0 16px 40px rgba(0, 0, 0, 0.18);
@@ -1117,15 +1129,16 @@
 
         /* MOBILE (simple ajuste) */
         @media (max-width: 768px), (display-mode: standalone) {
-            .brisa-chat-bubble {
+            .brisa-chat-fab {
                 left: 0;
-                bottom: calc(var(--bottom-nav-h) + 16px + env(safe-area-inset-bottom));
+                right: auto;
+                bottom: calc(var(--bottom-nav-h) + 20px + env(safe-area-inset-bottom));
             }
 
             .brisa-chat-panel {
-                left: 10px;
-                bottom: calc(var(--bottom-nav-h) + 84px + env(safe-area-inset-bottom));
-                width: 230px;
+                right: 0;
+                left: auto;
+                width: 18rem;
             }
 
             .brisa-chat-window {
@@ -1152,6 +1165,12 @@
 
             .brisa-chat-mini-modal {
                 padding-bottom: calc(var(--bottom-nav-h) + 56px + env(safe-area-inset-bottom));
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .brisa-chat-fab {
+                left: 32px;
             }
         }
 
